src/assets/scss/styles.scss
// Copyright (C) 2024 Jake Espinosa Under the MIT License
// See LICENSE.txt for details.

@import "bootstrap/scss/bootstrap";

.dvh-15 {
  height: 15dvh;
}

.dvh-10 {
  height: 10dvh;
}

.min-dvh-75 {
  min-height: 75dvh;
}

.w-80ch {
  width: 80ch;
}

.w-80vw {
  width: 80vw;
}

:root {
  --main-bg-color: #15202b;
  --secondary-bg-color: #192734;
  --main-text-color: #ffffff;
  --secondary-text-color: #8899a6;
}

.main-bg {
  background-color: var(--main-bg-color);
}

.secondary-bg {
  background-color: var(--secondary-bg-color);
}

.main-text {
  color: var(--main-text-color);
}

.secondary-text {
  color: var(--secondary-text-color);
}

